@@ -1,3 +1,7 @@
+2012-12-16  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-attempt-connection): Show the attempt counter.
+
 2012-12-03  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-backend.lisp (deinit-log-output): Move from swank-sbcl,
